[package]
name = "uooooo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
libc = "0.2.138"
thiserror = "1.0.37"

[dev-dependencies]
assert_cmd = { git = "https://github.com/wat-aro/assert_cmd", branch = "fix-stdin" }
